--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('../css/colors.css');
+
 *{
     margin: 0;
     padding: 0;
@@ -6,15 +8,15 @@
     color: var(--text-gray);
 }
 
+html{
+}
+
 body{
+
     overflow-x: hidden;
+
 }
-:root{
-    --blue-mikasa: #18317B;
-    --text-white: #fff;
-    --text-gray: #2D2D2D;
-    --yellow-mikasa: #FCD201;
-}
+
 
 /* HEADER DO SITE */
 header{
@@ -42,6 +44,10 @@ header{
     list-style: none;
 }
 
+.navigation>li>a{
+    text-decoration: none;
+}
+
 .navigation>li{
     cursor: pointer;
 }
@@ -63,6 +69,7 @@ header{
     flex-direction: column;
     justify-content: center;
     height: 100vh;
+    scroll-snap-align: start;
 }
 .banner_mikasa::before{
     content: "";
