--- a/public/css/headerForum.css
+++ b/public/css/headerForum.css
@@ -46,13 +46,39 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: var(--text-gray);
 }
 
+.foto_perfil>img{
+    width: 100%;
+}
+
+.menu_toggle{
+    position: relative;
+}
 .menu_toggle>i{
     font-weight: bold;
     color: var(--text-white);
     cursor: pointer;
+}
+
+.dropdow_menu{
+    position: absolute;
+    z-index: 1;
+    display: none;
+    flex-direction: column;
+    gap: 10px;
+    background-color: #fff;
+    width: 100px;
+    bottom: -70px;
+    right: 0px;
+    border: 1px solid black;
+}
+
+.dropdow_menu>span{
+    padding: 10px;
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
 }
 
 /* NAVIGATION */
