--- a/public/css/homeForum.css
+++ b/public/css/homeForum.css
@@ -56,8 +56,6 @@
 
 /* ITEM_POSTAGEM */
 
-
-
 .post_item{
     padding: 40px 20px;
     border-bottom: 1px solid var(--text-gray);
@@ -91,7 +89,10 @@
     width: 70px;
     height: 70px;
     border-radius: 50%;
-    background-color: var(--text-gray);
+}
+
+.foto_post>img{
+    width: 100%;
 }
 
 .post_status{
@@ -114,4 +115,57 @@
 .dataTime_post{
     font-weight: bold;
     align-self: flex-end;
+}
+
+/* MODAL INSERT POSTAGEM */
+.modal_container{
+    position: fixed;
+    display: none;
+    background-color: rgba(1, 1, 1, 0.8);
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+}
+
+.modal_content{
+    background-color: #fff;
+    width: 50%;
+    padding: 50px;
+    position: relative;
+}
+
+.form_post{
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+}
+
+.form_post>input,.form_post>textarea{
+    padding: 10px 5px;
+}
+
+.btn_insert_post{
+    align-self: flex-start;
+    padding: 15px 30px;
+    border: none;
+    cursor: pointer;
+    color: var(--text-white);
+    background-color: var(--blue-mikasa);
+}
+
+.header_modal{
+    position: absolute;
+    right: -10px;
+    top: -10px;
+    padding: 15px;
+    cursor: pointer;
+    background: var(--blue-mikasa);
+}
+
+.header_modal>i{
+    font-size: 18px;
+    color: var(--text-white);
 }
