--- a/public/css/homeForum.css
+++ b/public/css/homeForum.css
@@ -1,30 +1,37 @@
 .forum_grid{
     padding: 50px 10px;
-    height: 800px;
-    display: grid;
-    grid-template-areas: 
-    "grid1 grid1 grid2"
-    "grid1 grid1 grid3";
+    display: flex;
     max-width: 100%;
     gap: 20px;
 }
 
+#feed{
+    display: flex;
+    flex-direction: column-reverse;
+}
+
 #grid1{
-    grid-area: grid1;
     background-color: #fff;
-    height: 100%;
     overflow: hidden;
+    width: 70%;
+}
+
+.right_cards{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 #grid2{
-    grid-area: grid2;
+    width: 100%;
+    height: 300px;
     background-color: #fff;
-    height: 100%;
 }
 
 #grid3{
-    grid-area: grid3;
+    width: 100%;
+    height: 300px;
     background-color: #fff;
-    height: 100%;
 }
 
 .header_posts{
