feat: Rota para pegar postagem especifica com todas as informações adicionada na api, com idPostagem sendo passado por parametro ao clicar

--- a/public/css/homeForum.css
+++ b/public/css/homeForum.css
@@ -69,7 +69,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    cursor: pointer;
+}
 
+.post_item:hover{
+    background-color: #f0f0f0;
 }
 
 .post_section{
