feat: Rota para adicionar comentários nas postagens adicionada na API, comentários sendo exibidos com nome, hora e mensagem do usuário que comentou

--- a/public/css/homeForum.css
+++ b/public/css/homeForum.css
@@ -158,6 +158,11 @@
     padding: 10px 5px;
 }
 
+.form_post>textarea{
+    white-space: pre-wrap; 
+    overflow-wrap: break-word; 
+}
+
 .btn_insert_post{
     align-self: flex-start;
     padding: 15px 30px;
