--- a/public/css/post.css
+++ b/public/css/post.css
@@ -107,6 +107,8 @@
     width: 100%;
     height: 200px;
     padding: 10px 5px;
+    white-space: pre-wrap; 
+    overflow-wrap: break-word; 
 }
 
 .comentar_container>button{
