--- a/public/css/headerForum.css
+++ b/public/css/headerForum.css
@@ -1,4 +1,5 @@
 @import url('../css/colors.css');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 *{
     margin: 0;
@@ -35,10 +36,10 @@
 .perfil_container{
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
 }
 
-.perfil_container>span{
+#user_name{
     color: var(--text-white) ;
 }
 
@@ -54,11 +55,17 @@
 
 .menu_toggle{
     position: relative;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
 }
 .menu_toggle>i{
     font-weight: bold;
     color: var(--text-white);
-    cursor: pointer;
+    margin-top: -5px;
+
 }
 
 .dropdow_menu{
@@ -66,19 +73,22 @@
     z-index: 1;
     display: none;
     flex-direction: column;
-    gap: 10px;
     background-color: #fff;
-    width: 100px;
-    bottom: -70px;
+    width: 150px;
+    bottom: -100px;
     right: 0px;
     border: 1px solid black;
 }
 
 .dropdow_menu>span{
     padding: 10px;
-    cursor: pointer;
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+}
+
+.dropdow_menu>span:hover{
+    background-color: #f2f2f2;
 }
 
 /* NAVIGATION */
