--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -12,8 +12,8 @@
 
 .btn_voltar{
     cursor: pointer;
-    display: inline-block;
     color: var(--text-white);
+    width: 100px;
     display: flex;
     align-items: center;
     gap: 5px;
