--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -57,3 +57,32 @@
     font-size: 18px;
     color: var(--text-white);
 }
+
+/* modal de confirmação */
+.btn_container_confirm{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    align-items: center;
+}
+
+.title_confirm{
+    text-align: center;
+}
+
+.btn_confirm{
+    cursor: pointer;
+    margin-top: 20px;
+    border: none;
+    font-weight: bold;
+    color: #fff;
+    padding: 15px 30px;
+    font-size: 16px;
+}
+.cancelar{
+    background-color: var(--blue-mikasa);
+}
+
+.deletar{
+    background-color: #FF3636;
+}
