--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,8 +1,29 @@
-.dashboard_container{
+
+.dash_space{
     padding: 50px 10px;
+}
+
+.dashboard_container{
     display: flex;
-    flex-direction: column;
-    gap: 20px;
+    flex-direction: row-reverse;
+    width: 100%;
+    gap: 10px;
+}
+
+.title_dash{
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.dashboard_content{
+    background-color: #fff;
+}
+
+.dashboard_content>h2{
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
 }
 .btn_voltar>i{
     color: #fff;
@@ -17,29 +38,42 @@
     display: flex;
     align-items: center;
     gap: 5px;
+    margin-bottom: 10px;
 }
 
 .dashboard_kpi{
     background-color: var(--text-white);
-    padding: 30px;
     display: flex;
-    justify-content: space-around;
-    gap: 20px;
+    width: 20%;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5%;
 }
 
 .kpi{
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 20px;
 }
 
 .kpi>h1{
-    font-size: 60px;
+    font-size: 40px;
 }
 
 
 /* dashboard */
-.graph{
-    height: 400px;
+.graph_container{
     background-color: #fff;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.graph{
+    height: 350px;
+    width: 70%;
+    margin: auto;
+    padding: 10px;
 }
