feat: Implementado o upload de imagens utilizando a dependencia multer, para foto de perfil dos usuários do fórum

--- a/public/css/post.css
+++ b/public/css/post.css
@@ -12,11 +12,21 @@
     width: 70px;
     height: 70px;
     border-radius: 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
-.foto_post>img{
-    width: 100%;
+.foto_coments{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
+
+
 
 .header_post{
     display: flex;
