--- a/public/css/headerForum.css
+++ b/public/css/headerForum.css
@@ -47,10 +47,9 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-}
-
-.foto_perfil>img{
-    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .menu_toggle{
