--- a/public/css/homeForum.css
+++ b/public/css/homeForum.css
@@ -100,11 +100,11 @@
     width: 70px;
     height: 70px;
     border-radius: 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
-.foto_post>img{
-    width: 100%;
-}
 
 .post_status{
     display: flex;
