--- a/public/css/homeForum.css
+++ b/public/css/homeForum.css
@@ -77,9 +77,9 @@
 }
 
 .filter_content{
-    display: flex;
-    align-items: center;
-    gap: 10px;
+    padding: 10px 20px;
+    border: none;
+    background: none;
     cursor: pointer;
 }
 
