feat: Barra de pesquisa funcionando para listagem de postagens baseado no assunto digitado no input, utilizando WHERE p.assunto LIKE "%pesquia%" para filtragem no banco de dados

--- a/public/css/login_cadastro.css
+++ b/public/css/login_cadastro.css
@@ -76,20 +76,32 @@
     color: #0086E8;
 }
 
-.form_container>input {
+.form_container input{
     border: none;
     border-bottom: 1px solid var(--text-gray);
     padding: 10px 0px;
     margin-top: 5%;
     margin-bottom: 5px;
+    width: 100%;
 }
 
-.form_container>input::placeholder {
+.form_container input::placeholder {
     font-size: 14px;
 }
 
-.form_container>input:focus {
+.form_container input:focus {
     outline: none;
+}
+
+.container_senha{
+    position: relative;
+
+}
+
+.container_senha>i{
+    position: absolute;
+    right: 10px;
+    top: 50%;
 }
 
 .btn_container {
