--- a/public/css/homeForum.css
+++ b/public/css/homeForum.css
@@ -1,5 +1,5 @@
 .forum_grid{
-    padding: 50px 10px;
+    padding: 50px 10px 10px 10px;
     display: flex;
     max-width: 100%;
     gap: 20px;
@@ -205,4 +205,25 @@
 .header_modal>i{
     font-size: 18px;
     color: var(--text-white);
+}
+
+
+/* PAGINAÇÃO */
+.paginacao_container{
+    display: flex;
+    padding: 20px 10px;
+}
+
+.btn_page{
+    padding: 10px 15px;
+    font-weight: bold;
+    background-color: #fff;
+    border-right: 1px solid #f3f3f3;
+    cursor: pointer;
+}
+
+.pg_active{
+    background-color: var(--blue-mikasa) !important;
+    color: #fff !important; 
+    border-right: 1px solid var(--blue-mikasa);
 }
